--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
         <meta property="twitter:card" content="summary_large_image" />
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
-        <link rel="stylesheet" href="css/icons.css" />
         <link href="//fonts.googleapis.com/css?family=Exo:900,100,400" rel="stylesheet" type="text/css" />
-
         <link rel="stylesheet" href="css/main.css">
 
         <noscript>
@@ -97,7 +94,7 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='https://www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            ga('create','UA-48958016-1','auto');ga('send','pageview');
         </script>
     </body>
 </html>
