--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html class="no-js" lang="">
     <head>
+        <script type="text/javascript">
+            var host = "parin.me";
+            if ((host == window.location.host) && (window.location.protocol != "https:"))
+                window.location.protocol = "https";
+        </script>
+
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Parin Parikh | Software Developer | London, UK</title>
