--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <li><a class="icon-twitter n01" href="https://twitter.com/parin95"><span class="label">twitter</span></a></li>
                         <li><a class="icon-medium n02" href="https://medium.com/@parin95"><span class="label">medium</span></a></li>
                         <li><a class="icon-github n03" href="https://github.com/parin95"><span class="label">github</span></a></li>
-                        <li><a class="icon-linkedin n04" href="http://uk.linkedin.com/pub/parin-parikh/95/ba3/942/"><span class="label">linkedin</span></a></li>
+                        <li><a class="icon-linkedin n04" href="https://www.linkedin.com/in/parin-parikh-942ba395"><span class="label">linkedin</span></a></li>
                         <li><a class="icon-envelope n05" href="mailto:contact@parin.me"><span class="label">email</span></a></li>
 
                     </ul>
