--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 
                     <ul class="icons" id="icons01">
 
-                        <li><a class="icon-twitter n01" href="https://twitter.com/parin95"><span class="label">twitter</span></a></li>
-                        <li><a class="icon-medium n02" href="https://medium.com/@parin95"><span class="label">medium</span></a></li>
-                        <li><a class="icon-github n03" href="https://github.com/parin95"><span class="label">github</span></a></li>
-                        <li><a class="icon-linkedin n04" href="https://www.linkedin.com/in/parin-parikh-942ba395"><span class="label">linkedin</span></a></li>
+                        <li><a class="icon-twitter n01" href="https://twitter.com/parin95" onclick="trackOutboundLink('https://twitter.com/parin95'); return false;"><span class="label">twitter</span></a></li>
+                        <li><a class="icon-medium n02" href="https://medium.com/@parin95" onclick="trackOutboundLink('https://medium.com/@parin95'); return false;"><span class="label">medium</span></a></li>
+                        <li><a class="icon-github n03" href="https://github.com/parin95" onclick="trackOutboundLink('https://github.com/parin95'); return false;"><span class="label">github</span></a></li>
+                        <li><a class="icon-linkedin n04" href="https://www.linkedin.com/in/parin-parikh-942ba395" onclick="trackOutboundLink('https://www.linkedin.com/in/parin-parikh-942ba395'); return false;"><span class="label">linkedin</span></a></li>
                         <li><a class="icon-envelope n05" href="mailto:contact@parin.me"><span class="label">email</span></a></li>
 
                     </ul>
@@ -85,6 +85,12 @@
 
         <script>
         var d = document, b = d.body, on = addEventListener, st = setTimeout, ct = clearTimeout;on('load', function() {st(function() {b.className = b.className.replace(/\bis-loading\b/, 'is-playing');st(function() {b.className = b.className.replace(/\bis-playing\b/, 'is-ready')}, 3000);}, 100);});b.tabIndex = -1;var rfk = '-webkit-overflow-scrolling', rf = function() {b.style[rfk] = 'auto';st(function() {b.style[rfk] = 'touch';b.focus();}, 100);};on('load', rf);on('orientationchange', rf);if (navigator.userAgent.match(/(MSIE|rv:11\.0)/)) {(function() {var t, f;f = function() {var x = d.querySelector('#wrapper');if (x.scrollHeight > innerHeight)x.style.height = 'auto'; else x.style.height = '100%';};(f)();on('resize', function() {ct(t);t = st(f, 250);});})();}
+        var trackOutboundLink = function(url) {
+            ga('send', 'event', 'outbound', 'click', url, {
+                'transport': 'beacon',
+                'hitCallback': function(){document.location = url;}
+            });
+        }
         </script>
     </body>
 </html>
