Fix for external links tracking

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 
                     <ul class="icons" id="icons01">
 
-                        <li><a class="icon-twitter n01" href="https://twitter.com/parin95" onclick="trackOutboundLink('https://twitter.com/parin95'); return false;"><span class="label">twitter</span></a></li>
-                        <li><a class="icon-medium n02" href="https://medium.com/@parin95" onclick="trackOutboundLink('https://medium.com/@parin95'); return false;"><span class="label">medium</span></a></li>
-                        <li><a class="icon-github n03" href="https://github.com/parin95" onclick="trackOutboundLink('https://github.com/parin95'); return false;"><span class="label">github</span></a></li>
-                        <li><a class="icon-linkedin n04" href="https://www.linkedin.com/in/parin-parikh-942ba395" onclick="trackOutboundLink('https://www.linkedin.com/in/parin-parikh-942ba395'); return false;"><span class="label">linkedin</span></a></li>
+                        <li><a class="icon-twitter n01" href="https://twitter.com/parin95" onclick="return trackOutboundLink('https://twitter.com/parin95')"><span class="label">twitter</span></a></li>
+                        <li><a class="icon-medium n02" href="https://medium.com/@parin95" onclick="return trackOutboundLink('https://medium.com/@parin95')"><span class="label">medium</span></a></li>
+                        <li><a class="icon-github n03" href="https://github.com/parin95" onclick="return trackOutboundLink('https://github.com/parin95')"><span class="label">github</span></a></li>
+                        <li><a class="icon-linkedin n04" href="https://www.linkedin.com/in/parin-parikh-942ba395" onclick="return trackOutboundLink('https://www.linkedin.com/in/parin-parikh-942ba395')"><span class="label">linkedin</span></a></li>
                         <li><a class="icon-envelope n05" href="mailto:contact@parin.me"><span class="label">email</span></a></li>
 
                     </ul>
@@ -91,9 +91,10 @@
         
         var trackOutboundLink = function(url) {
             ga('send', 'event', 'outbound', 'click', url, {
-                'transport': 'beacon',
-                'hitCallback': function(){document.location = url;}
+                'transport': 'beacon'
             });
+            
+            return true;
         };
         </script>
         <script src="https://www.google-analytics.com/analytics.js" async defer></script>
