--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <meta property="twitter:card" content="summary_large_image" />
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/all.css">
     </head>
     <body>
 
