--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Parin Parikh | Software Developer | London, UK</title>
-        <meta name="description" content="I'm a software developer based in London. I love solving problems using programming. I also blog about my thoughts on interesting technologies and life.">
+        <title>Parin Parikh | Software Developer | San Francisco Bay Area</title>
+        <meta name="description" content="I'm a software developer based in San Francisco Bay Area. I love solving problems using programming. I also blog about my thoughts on interesting technologies and life.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta property="og:site_name" content="Parin Parikh | Software Developer | London, UK" />
-        <meta property="og:title" content="Parin Parikh | Software Developer | London, UK" />
+        <meta property="og:site_name" content="Parin Parikh | Software Developer | San Francisco Bay Area" />
+        <meta property="og:title" content="Parin Parikh | Software Developer | San Francisco Bay Area" />
         <meta property="og:type" content="article" />
         <meta property="og:image" content="https://parin.me/img/screenshot.png" />
-        <meta property="og:description" content="I'm a software developer based in London. I love solving problems using programming. I also blog about my thoughts on interesting technologies and life." />
+        <meta property="og:description" content="I'm a software developer based in San Francisco Bay Area. I love solving problems using programming. I also blog about my thoughts on interesting technologies and life." />
         <meta property="og:url" content="https://parin.me" />
         <meta property="twitter:card" content="summary_large_image" />
 
