Updated description and icons

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Parin Parikh | Software Developer | San Francisco Bay Area</title>
-        <meta name="description" content="I'm a software developer based in San Francisco Bay Area. I love solving problems using programming. I also blog about my thoughts on interesting technologies and life.">
+        <meta name="description" content="I'm a software developer based in San Francisco Bay Area. I love designing fluid experiences.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <meta property="og:site_name" content="Parin Parikh | Software Developer | San Francisco Bay Area" />
         <meta property="og:title" content="Parin Parikh | Software Developer | San Francisco Bay Area" />
         <meta property="og:type" content="article" />
         <meta property="og:image" content="https://parin.me/img/screenshot.png" />
-        <meta property="og:description" content="I'm a software developer based in San Francisco Bay Area. I love solving problems using programming. I also blog about my thoughts on interesting technologies and life." />
+        <meta property="og:description" content="I'm a software developer based in San Francisco Bay Area. I love designing fluid experiences." />
         <meta property="og:url" content="https://parin.me" />
         <meta property="twitter:card" content="summary_large_image" />
 
@@ -29,17 +29,17 @@
                     <hr id="divider">
 
                     <ul class="icons">
-                        <li>
+                        <!-- <li>
                             <a class="icon-github" href="https://github.com/parin95" onclick="return trackOutboundLink(this.href)">
                                 <span class="label">github</span>
                             </a>
-                        </li>
+                        </li> -->
 
-                        <li>
+                        <!-- <li>
                             <a class="icon-medium" href="https://medium.com/@parin95" onclick="return trackOutboundLink(this.href)">
                                 <span class="label">medium</span>
                             </a>
-                        </li>
+                        </li> -->
 
                         <li>
                             <a class="icon-linkedin" href="https://www.linkedin.com/in/parin-parikh-942ba395" onclick="return trackOutboundLink(this.href)">
@@ -47,11 +47,11 @@
                             </a>
                         </li>
 
-                        <li>
+                        <!-- <li>
                             <a class="icon-twitter" href="https://twitter.com/parin95" onclick="return trackOutboundLink(this.href)">
                                 <span class="label">twitter</span>
                             </a>
-                        </li>
+                        </li> -->
 
                         <li>
                             <a class="icon-envelope" href="mailto:contact@parin.me">
